<resources>
    <string name="app_name">ScreenCapture2Gif</string>
    <string name="title_activity_settings">Settings</string>

    <string name="btn_text_start">Start</string>


    <string name="menu_main_eidt">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_general_settings">General</string>
    <string name="pref_title_advanced_settings">Advanced</string>

    <string name="pref_title_save_directory">Save Directory</string>
    <string name="pref_key_save_directory">pref_key_save_directory</string>
    <string name="pref_summary_save_directory">Default: Download</string>
    <string name="pref_dialog_title_save_directory">Save Directory</string>
    <string name="pref_default_value_save_directory">Download</string>


    <string name="pref_title_gif_name">Gif Name</string>
    <string name="pref_key_gif_name">pref_key_gif_name</string>
    <string name="pref_summary_gif_name">Default: demo.gif</string>
    <string name="pref_dialog_title_gif_name">Gif Name</string>
    <string name="pref_default_value_gif_name">demo.gif</string>

    <string name="pref_title_show_touch_feedback">Show Touch Feedback</string>
    <string name="pref_key_show_touch_feedback">pref_key_show_touch_feedback</string>

    <string name="pref_title_gif_size">Gif Size</string>
    <string name="pref_key_gif_size">pref_key_gif_size</string>
    <string name="pref_dialog_title_gif_size">Gif Size</string>
    <string name="pref_default_value_gif_size">270x480</string>
    <string name="pref_summary_gif_size">Default: 270x480</string>
    <string-array name="pref_entries_gif_size">
        <item name="0">Original</item>
        <item name="1">270x480</item>
    </string-array>
    <string-array name="pref_entry_values_gif_size">
        <item name="0">Original</item>
        <item name="1">270x480</item>
    </string-array>

    <string name="pref_title_video_name">Video Name</string>
    <string name="pref_key_video_name">pref_key_video_name</string>
    <string name="pref_summary_video_name">Default: video.mp4</string>
    <string name="pref_dialog_title_video_name">Video Name</string>
    <string name="pref_default_value_video_name">video.mp4</string>

    <string name="pref_title_gif_frame_rate">Gif Frame Rate</string>
    <string name="pref_key_gif_frame_rate">pref_key_gif_frame_rate</string>
    <string name="pref_dialog_title_gif_frame_rate">Gif Frame Rate</string>
    <string name="pref_default_value_gif_frame_rate">270x480</string>
    <string name="pref_summary_gif_frame_rate">Default: 10</string>
    <string-array name="pref_entries_gif_frame_rate">
        <item name="1">5</item>
        <item name="2">10</item>
        <item name="3">20</item>
        <item name="4">30</item>
    </string-array>
    <string-array name="pref_entry_values_gif_frame_rate">
        <item name="1">5</item>
        <item name="2">10</item>
        <item name="3">20</item>
        <item name="4">30</item>
    </string-array>

    <string name="pref_title_video_frame_rate">Video Frame Rate</string>
    <string name="pref_key_video_frame_rate">pref_key_video_frame_rate</string>
    <string name="pref_dialog_title_video_frame_rate">Video Frame Rate</string>
    <string name="pref_summary_video_frame_rate">Default: 30</string>
    <string name="pref_default_value_video_frame_rate">30</string>
    <string-array name="pref_entries_video_frame_rate">
        <item name="0">5</item>
        <item name="1">10</item>
        <item name="2">20</item>
        <item name="3">30</item>
    </string-array>
    <string-array name="pref_entry_values_video_frame_rate">
        <item name="0">5</item>
        <item name="1">10</item>
        <item name="2">20</item>
        <item name="3">30</item>
    </string-array>

    <string name="notification_title">ScreenCapture2Gif</string>
    <string name="notification_record_time_prefix">Has Record: </string>
</resources>
