<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_general_settings"
        android:key="pref_key_general_settings">

        <SwitchPreference
            android:title="@string/pref_title_show_touch_feedback"
            android:key="@string/pref_key_show_touch_feedback"
            android:defaultValue="true"
            android:checked="true" />


        <EditTextPreference
            android:title="@string/pref_title_save_directory"
            android:key="@string/pref_key_save_directory"
            android:summary="@string/pref_summary_save_directory"
            android:dialogTitle="@string/pref_dialog_title_save_directory"
            android:defaultValue="@string/pref_default_value_save_directory"/>

        <EditTextPreference
            android:title="@string/pref_title_gif_name"
            android:key="@string/pref_key_gif_name"
            android:summary="@string/pref_summary_gif_name"
            android:dialogTitle="@string/pref_dialog_title_gif_name"
            android:defaultValue="@string/pref_default_value_gif_name"/>

        <ListPreference
            android:title="@string/pref_title_gif_size"
            android:key="@string/pref_key_gif_size"
            android:dialogTitle="@string/pref_dialog_title_gif_size"
            android:defaultValue="@string/pref_default_value_gif_size"
            android:summary="@string/pref_summary_gif_size"
            android:entries="@array/pref_entries_gif_size"
            android:entryValues="@array/pref_entry_values_gif_size"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_advanced_settings"
        android:key="pref_key_advanced_settings">

        <EditTextPreference
            android:title="@string/pref_title_video_name"
            android:key="@string/pref_key_video_name"
            android:summary="@string/pref_summary_video_name"
            android:dialogTitle="@string/pref_dialog_title_video_name"
            android:defaultValue="@string/pref_default_value_video_name"/>

        <ListPreference
            android:title="@string/pref_title_video_frame_rate"
            android:key="@string/pref_key_video_frame_rate"
            android:dialogTitle="@string/pref_dialog_title_video_frame_rate"
            android:summary="@string/pref_summary_video_frame_rate"
            android:defaultValue="@string/pref_default_value_video_frame_rate"
            android:entries="@array/pref_entries_video_frame_rate"
            android:entryValues="@array/pref_entry_values_video_frame_rate"/>

        <ListPreference
            android:title="@string/pref_title_gif_frame_rate"
            android:key="@string/pref_key_gif_frame_rate"
            android:dialogTitle="@string/pref_dialog_title_gif_frame_rate"
            android:defaultValue="@string/pref_default_value_gif_frame_rate"
            android:summary="@string/pref_summary_gif_frame_rate"
            android:entries="@array/pref_entries_gif_frame_rate"
            android:entryValues="@array/pref_entry_values_gif_frame_rate"/>
    </PreferenceCategory>

</PreferenceScreen>